# HiMem-Bridge-VLA

./: .gitignore  AGENTS.md  Plan.md  README.md  Structure.md  deepspeed_setup_example.txt  pyproject.toml  requirements-dev.txt  requirements-libero.txt  requirements-policy.json  requirements.txt  setup.py
referen-repo/memer/: .gitignore  README.md  TRAINING_QWEN3VL.md  pyproject.toml
referen-repo/memer/configs/robots/: panda_stacked_rgb_camera_layout.json
referen-repo/memer/configs/tasks_from_paper/: counting_keyframe_rules.json  dusting_keyframe_rules.json  object_search_keyframe_rules.json
referen-repo/memer/memer_eval/: __init__.py  camera_layout.py  contract.py  dataset_metadata.py  deploy.py  inference.py  memory.py  rollout.py  utils.py
referen-repo/memer/scripts/: eval_subtask_rollout.py  generate_sft_data.py
referen-repo/robomme_benchmark/: .dockerignore  .gitignore  pyproject.toml  readme.md
referen-repo/robomme_benchmark/challenge_interface/: client.py  client_http.py  policy.py  readme.md  server.py  server_http.py
referen-repo/robomme_benchmark/challenge_interface/scripts/: deploy.py  phase1_eval.py
referen-repo/robomme_benchmark/doc/: docker_installation.md  env_format.md  h5_data_format.md
referen-repo/robomme_benchmark/doc/submission/: model_example.md
referen-repo/robomme_benchmark/scripts/: dataset_replay.py  evaluation.py  run_example.py
referen-repo/robomme_benchmark/src/robomme/: logging_utils.py
referen-repo/robomme_benchmark/src/robomme/env_record_wrapper/: DemonstrationWrapper.py  EndeffectorDemonstrationWrapper.py  FailAwareWrapper.py  MultiStepDemonstrationWrapper.py  (+5 more)
referen-repo/robomme_benchmark/tests/: README.md  conftest.py
referen-repo/robomme_benchmark/tests/_shared/: __init__.py  dataset_generation.py  repo_paths.py
referen-repo/robomme_benchmark/tests/dataset/: conftest.py  test_eepose_error_handling.py  test_obs_config.py  test_obs_numpy.py  test_record_stick.py  test_replay_stick.py  test_route_stick_waypoint_boundary.py  test_waypoint_phase_isolation.py
referen-repo/robomme_benchmark/tests/lightweight/: test_ChoiceLabel.py  test_ChoicePositionNearest.py  test_StopcubeIncrement.py  test_TaskGoal.py  test_TaskGoalI_isList.py  test_choice_action_is_keyframe_flow.py  test_choice_action_pixel_mapping.py  test_record_info_is_completed.py  test_record_video_metadata_fields.py  test_record_waypoint_pending_flow.py  test_step_error_handling.py  test_waypoint_dense_dedup.py
(+887 files in other folders)
