[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "himem-bridge-vla"
version = "0.1.0"
description = "HiMem Bridge VLA research code"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  "reference-paper",
  "referen-repo",
  "reference-repo",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"evaluations/legacy/libero/*.py" = ["E402"]
"scripts/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
